UX: Prevent input text from covering suggestion button (#212)

--- a/assets/stylesheets/modules/ai-helper/common/ai-helper.scss
+++ b/assets/stylesheets/modules/ai-helper/common/ai-helper.scss
@@ -205,7 +205,7 @@
   position: absolute;
   top: 1px;
   right: 1px;
-  background: none;
+  background: var(--secondary);
   border: none;
 }
 
